macro(package_add_test TESTNAME)
    add_executable(${TESTNAME} ${ARGN})
	target_include_directories(${TESTNAME} PUBLIC ${PROJECT_SOURCE_DIR})
    target_link_libraries(${TESTNAME} gtest gmock gtest_main REACHABLE BUILDER)
    add_test(NAME ${TESTNAME} COMMAND ${TESTNAME})
    set_target_properties(${TESTNAME} PROPERTIES FOLDER tests)
endmacro()

package_add_test(location_test location_test.cpp)
package_add_test(maze_graph_test maze_graph_test.cpp)
package_add_test(graph_algorithms_test graph_algorithms_test.cpp)
package_add_test(graph_builder_test graph_builder_test.cpp)
package_add_test(tree_graph_builder_test tree_graph_builder_test.cpp)
package_add_test(exhsearch_test exhsearch_test.cpp)
